<resources>
    <string name="app_name">Clippy</string>
    <string name="media_controls">Media Controls</string>
    <string name="system_control">System Control</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="sleep">Sleep</string>
    <string name="hibernate">Hibernate</string>
    <string name="send_a_file">Send a file</string>
    <string name="view_screenshot">View Screenshot</string>
    <string name="remote_control">Remote Control</string>
    <string name="enter_keyboard_input">Enter Keyboard Input here</string>
    <string name="mouse_control">Mouse Control Mode</string>
    <string name="keyboard_control">Keyboard Controls</string>
    <string name="right_click">Right Click</string>
    <string name="left_click">Left Click</string>
    <string name="left"><![CDATA[◄]]></string>
    <string name="right"><![CDATA[►]]></string>
    <string name="up"><![CDATA[▲]]></string>
    <string name="down"><![CDATA[▼]]></string>
    <string name="trackpad_mode">Trackpad Mode</string>
    <string name="arrows_mode">Arrows Mode</string>
    <string name="preference_file_key">config</string>
    <string-array name="remote_control_dropdown">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>

</resources>